<resources>
    <string name="facebook_app_id">794003957811227</string>
    <string name="fb_login_protocol_scheme">fb794003957811227</string>

    <string name="title">PWr\'s Plan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_subject">Add Subject</string>
    <string name="plan">Plan</string>
    <string name="edit_plan">Edit plan</string>
    <string name="lect">Wykład</string>
    <string name="term">Term</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="time">Time: </string>
    <string name="room">Room</string>
    <string name="lab">Lab</string>
    <string name="lecturer">Lecturer</string>
    <string name="week">Week</string>
    <string name="OddWeek">TN</string>
    <string name="EvenWeek">TP</string>
    <string name="roomHint">Budynek, Sala</string>
    <string name="lecturerHint">Lecturer</string>
    <string name="TermHint">Tydzień, godzina</string>
    <string name="TimeHint">Czas trwania zajęć (min)</string>
    <string name="NameHint">Nazwa przedmiotu</string>
    <string name="nazwa">Nazwa:</string>
    <string name="termin">Termin:</string>
    <string name="sala">Sala:</string>
    <string name="prowadz_cy">Prowadzący:</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear_plan">Clear plan</string>
    <string name="actions">Actions</string>
    <string name="settings">Settings</string>
    <string name="tests">Tests</string>
    <string name="add_test">Add Test</string>
    <string name="edit_absences">Edit Absences</string>
    <string name="nieobecno_ci">Nieobecności</string>
    <string name="test">Test Name</string>

    <string name="test_date">Test Date</string>
    <string name="test_date_hint">Test Date e.g 01.01.2020</string>
    <string name="test_name">Test name e.g Test 1</string>
    <string name="connect_with_FB">Connect with FaceBook</string>
    <string name="increment_number_of_absences">Increment number of absences</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="decrement_number_of_absences">Decrement number of Absences</string>
    <string name="links">Links</string>
    <string name="linkToTheSite">Link to the site e.g www.google.pl</string>
    <string name="link">Link</string>
    <string name="nameOfTheSite">Name of the site e.g Google</string>
    <string name="notes">Notes</string>
    <string name="about">ABOUT</string>
    <string name="advanced">ADVANCED</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="notificationsInfo">On/Off Notifications</string>
    <string name="documentsFolder">Documents folder</string>
    <string name="documentsFolderInfo">Where do you want to store subject\'s documents</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="fullscreenInfo">On/Off Fullscreen</string>
    <string name="author">Author: Dawid Gadomski</string>
    <string name="version">Version: 1.0</string>
    <string name="colors">COLORS</string>
    <string name="mainColor">Main Color</string>
    <string name="mainColorInfo">Main color of app</string>
    <string name="secondColor">Second Color</string>
    <string name="secondColorInfo">Highlight color</string>
    <string name="thirdColor">Third Color</string>
    <string name="thirdColorInfo">Lines color</string>
    <string name="fourthColor">Fourth Color</string>
    <string name="fourthColorInfo">Color of the board</string>
    <string name="gridColor">Grid Color</string>
    <string name="gridColorInfo">Color of the grid</string>
    <string name="textColor">Text Color</string>
    <string name="textColorInfo">Color of text in app</string>
    <string name="lectureColor">Lecture Color</string>
    <string name="lectureColorInfo">Color of lecture in grid</string>
    <string name="seminaryColor">Seminary Color</string>
    <string name="seminaryColorInfo">Color of seminary in app</string>
    <string name="projectColor">Project Color</string>
    <string name="projectColorInfo">Color of project in app</string>
    <string name="labColor">Lab Color</string>
    <string name="labColorInfo">Color of lab in app</string>
    <string name="pickColor">Pick Color</string>
    <string name="chooseFilePath">Choose file path</string>
    <string name="noSelection">No Selection</string>
    <string name="pro">Projekt</string>
    <string name="sem">Seminarium</string>
    <string name="note">Notatki</string>
    <string name="noteText">Przykładowy tekst...</string>
    <string name="load_from_iCalendar">iCalendar</string>
</resources>
