<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/actions">
        <menu>
            <item android:id="@+id/nav_clear_plan"
                android:icon="@drawable/ic_clear_all_black"
                android:title="@string/clear_plan"/>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_schedule"
            android:title="@string/plan" />

        <item
            android:id="@+id/nav_add_sub"
            android:icon="@drawable/ic_add"
            android:title="@string/add_subject" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>



</menu>