<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#969696"
    tools:context=".Fragments.InputSubjectFragment">

    <RadioGroup
        android:id="@+id/rgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:checkedButton="@id/rbLect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRoom">

        <RadioButton
            android:id="@+id/rbLect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lect"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbLab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/bCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toEndOf="@+id/bAccept"
        app:layout_constraintTop_toBottomOf="@+id/rgWeek"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#7F7F7F"
        android:ems="10"
        android:hint="@string/roomHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.87"
        app:layout_constraintStart_toEndOf="@+id/tvRoom"
        app:layout_constraintTop_toBottomOf="@+id/edProf" />

    <EditText
        android:id="@+id/edTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#7F7F7F"
        android:ems="10"
        android:hint="@string/TermHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toEndOf="@+id/tvTerm"
        app:layout_constraintTop_toBottomOf="@+id/edTime" />

    <EditText
        android:id="@+id/edProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#7F7F7F"
        android:ems="10"
        android:hint="@string/lecturerHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.849"
        app:layout_constraintStart_toEndOf="@+id/tvProf"
        app:layout_constraintTop_toBottomOf="@+id/edTerm" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:background="#7F7F7F"
        android:ems="10"
        android:hint="@string/NameHint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/edTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#7F7F7F"
        android:ems="10"
        android:hint="@string/TimeHint"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toEndOf="@+id/tvTime"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <Button
        android:id="@+id/bAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@android:string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgType"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/tvTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/term"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <TextView
        android:id="@+id/tvRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/room"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProf" />

    <TextView
        android:id="@+id/tvProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/lecturer"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTerm" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:text="@string/time"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <RadioGroup
        android:id="@+id/rgWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/rbWeek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toEndOf="@+id/rgType"
        app:layout_constraintTop_toBottomOf="@+id/edRoom">

        <RadioButton
            android:id="@+id/rbWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbOddWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OddWeek"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbEvenWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EvenWeek"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>